k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrubs-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.shukomango.co.in
      secretName: scrubs-api-tls-secret 
  rules:
    - host: api.shukomango.co.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scrubs-api-service 
                port:
                  number: 80
